test/functions/deitz/test_param_function_with_for_loop.chpl

proc foo(x : int) param {
  for i in 1..x do assert(i <= x);
  return 0;
}

foo(10);
